# FunctionSpeaker

./: CMakeLists.txt  LICENSE.txt  README.MD
example/: main.cpp
src/: FunctionSpeaker.cpp  FunctionSpeaker.h
